--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  
 }
 .grid{
 
@@ -29,11 +30,42 @@
 .navbar{
   display: flex;
   justify-content: space-between;
+  background-color: aliceblue;
   align-items: center;
   width: 100%;
   height: 10%;
+  padding: 10px;
 }
-
+.details_container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.details_container .left{
+  border: 1px solid red;
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.details_container .right{
+  border: 1px solid green;
+  width: 60%;
+  height: 100%;
+}
+.details_container .image{
+  width: 50%;
+  height: 50%;
+}
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin:25% 25%;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
